#63 Fix config being reloaded